--- a/async-requests/poll/task.html
+++ b/async-requests/poll/task.html
@@ -12,6 +12,12 @@
     <link rel="stylesheet" href="task.css" />
   </head>
   <body>
+    <div class="modal">
+      <div class="modal__alert">
+        <div class="modal__text">Спасибо, ваш голос засчитан!</div>
+        <p class="modal__close">Закрыть</p>
+      </div>
+    </div>
     <header class="header">
       <div class="logo__container">
         <a href="https://netology.ru/" class="logo__link"></a>
